--- a/css/style.css
+++ b/css/style.css
@@ -65,11 +65,9 @@ img {
 
 .slider {
   position: relative;
-
-  padding-top: 313px;
-
+  padding-top: 280px;
   text-align: center;
-  color: #ffffff;
+  color: #fff;
 }
 
 .slider-list {
@@ -80,27 +78,19 @@ img {
 }
 
 .slide-title {
-  position: relative;
-  bottom: 45px;
-  left: 15px;
-
-  display: block;
-  width: 700px;
-  margin: 0 auto;
-  margin-bottom: 27px;
-
-  font-weight: 700;
-  font-size: 60px;
-  line-height: 60px;
-
-  border-bottom: 39px;
+  width: 723px;
+    margin: 0 auto;
+    margin-top: -3px;
+    margin-bottom: 26px;
+    font-weight: 700;
+    font-size: 61px;
+    line-height: 60.35px;
 }
 
 
 .slider-button {
-  position: relative;
-  bottom: 43px;
-
+  
+  margin-bottom: 39px;
   display: inline-block;
   padding: 12px 38px;
 
@@ -317,14 +307,6 @@ img {
   border-radius: 5px;
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
 }
-/* .site-navigation-sub {
-  content: "";
-  position: absolute;
-  top: 20px;
-  left: -20px;
-  width: 100px;
-  height: 40px;
-} */
 
 .site-navigation-list {
   position: absolute;
@@ -681,8 +663,8 @@ img {
 
 .deals h3 {
   margin: 0 auto;
-  margin-left: 20px;
-
+  margin-left: 1px;
+  margin-bottom: 10px;
   font-weight: 700;
   font-size: 35px;
   line-height: 41px;
@@ -691,10 +673,6 @@ img {
 .deals p {
   margin-top: 4px;
   margin-bottom: 34px;
-  padding-right: 10px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-
   font-weight: 700;
   line-height: 22px;
   text-align: left;
@@ -702,15 +680,14 @@ img {
 
 .deals-item-raspberry {
   position: relative;
-
+  padding: 17px;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
   width: 560px;
   margin: 0;
   margin-right: 26px;
-  margin-left: 5px;
-
+ 
   background-color: #a03472;
   background-image: url(../img/deals-1.jpg);
   background-repeat: no-repeat;
@@ -720,7 +697,7 @@ img {
 
 .deals-item-chocolate {
   position: relative;
-
+  padding: 17px;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
@@ -746,17 +723,15 @@ img {
 .deals-button {
   display: block;
   box-sizing: border-box;
-  margin-right: 18px;
   margin-left: auto;
+  margin-top: 10px;
   padding: 9px 21px 9px 21px;
-
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
   color: #ffffff;
   text-decoration: none;
   text-shadow: 2px 2px 5px rgba(160, 32, 11, 0.76);
-
   background-image: linear-gradient(#f16743, #e74b36);
   border-radius: 22px;
   box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
@@ -1106,7 +1081,7 @@ img {
   height: 17px;
   padding: 7px 7px 4px 8px;
 
-  background-color: #a1b4a9;
+  background-color: rgba(255, 255, 255, 0.2);
   border-radius: 50%;
 }
 
@@ -1125,7 +1100,7 @@ img {
 
   color: #ffffff;
 
-  background-color: #9db1a5;
+  background-color: rgba(255, 255, 255, 0.2);
   background-repeat: no-repeat;
   border-radius: 15px;
 }
@@ -1240,6 +1215,23 @@ img {
   display: block;
 }
 
+.site-navigation a::after {
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: -20px;
+  width: 100px;
+  height: 40px;
+/* background-color: #9e4334; */
+}
+
+.basket {
+  fill: #fff;
+  }
+  .header-btn-basket:hover .basket{
+  fill: #000;
+  }
+
 .header-btn-basket {
   display: flex;
   flex-direction: row-reverse;
@@ -1252,7 +1244,7 @@ img {
   font-size: 14px;
   line-height: 16px;
 
-  background-color: #9db1a5;
+  background-color: rgba(255, 255, 255, 0.2);
   background-repeat: no-repeat;
   border-radius: 15px;
 }
@@ -1654,18 +1646,16 @@ fieldset:nth-child(4) {
 .offers-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   margin: 0;
-  padding: 0;
+  padding: 0 27px;
 }
 
 .offers-item:nth-child(4n) {
   margin-right: 0;
 }
-/* .offers-list:nth-child(4n) {
-  margin-right: 0;
-} */
+
 
 .blog-news-wrapper {
   display: flex;
@@ -2020,6 +2010,7 @@ fieldset:nth-child(4) {
 }
 
 .category-filters {
+
   box-sizing: border-box;
   min-width: 193px;
   min-height: 36px;
@@ -2029,17 +2020,25 @@ fieldset:nth-child(4) {
   font-size: 16px;
   line-height: 18px;
   color: #ffffff;
-
+  font-weight: 700;
   background-color: transparent;
   background-image: url("../img/select-arrow.svg");
-  background-repeat: no-repeat;
+   background-size: 11px 11px;
+  background-position: 161px center;
+   background-repeat: no-repeat; 
+   appearance: none;
   border: none;
+  -webkit-appearance: none;
   border-radius: 20px;
   outline: none;
-  cursor: pointer;
+  cursor: pointer; 
 }
+
 .category-filters:hover {
   color: #000000;
+  background-color: #ffffff;
+  background-image: url("../img/icon-down-dir.svg");
+ 
 }
 
 
