--- a/css/style.css
+++ b/css/style.css
@@ -41,12 +41,7 @@ img {
   min-width: 1200px;
   margin: 0 auto;
 }
-.site-wrapper {
-  background-color: #849d8f;
-  background-image: url("../img/slider-1.png");
-  background-repeat: no-repeat;
-  background-position: top center;
-}
+
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -169,16 +164,23 @@ img {
 #product-1:checked ~ .site-wrapper {
   background-color: #849d8f;
   background-image: url("../img/slider-1.png");
+  background-repeat: no-repeat;
+  background-position: top center;
+  
 }
 
 #product-2:checked ~ .site-wrapper {
   background-color: #8996a6;
   background-image: url("../img/slider-2.png");
+  background-repeat: no-repeat;
+  background-position: top center;
 }
 
 #product-3:checked ~ .site-wrapper {
   background-color: #9d8b84;
   background-image: url("../img/slider-3.png");
+  background-repeat: no-repeat;
+  background-position: top center;
 }
 
 
@@ -483,7 +485,7 @@ img {
 
 
 .popular-offers {
-  margin-bottom: 10px;
+  margin-bottom: 3px;
 }
 
 .offers-item {
@@ -493,7 +495,6 @@ img {
   width: 267px;
   margin-right: 17px;
   margin-bottom: 33px;
-  margin-left: 6px;
 
   list-style: none;
   vertical-align: top;
@@ -779,15 +780,16 @@ img {
   margin-bottom: 45px;
 }
 .features {
+  box-sizing: border-box;
   min-height: 280px;
   margin-right: 27px;
   margin-bottom: 40px;
   margin-left: 27px;
   padding-top: 26px;
   padding-left: 18px;
-
+  padding-bottom: 23px;
+  padding-right: 10px;
   color: #333333;
-
   background: url(../img/waffel.jpg) #eee0c4;
   border-radius: 14px;
 }
@@ -804,7 +806,7 @@ img {
   justify-content: flex-start;
   width: 527px;
   margin-top: 21px;
-  margin-left: -17px;
+  margin-left: -10px;
 }
 .features-list-left,
 .features-list-right {
@@ -1330,7 +1332,7 @@ img {
   display: flex;
   margin: 0;
   margin-top: -24px;
-  margin-bottom: 7px;
+  /* margin-bottom: 7px; */
   margin-left: 27px;
   padding: 0;
 
@@ -1549,7 +1551,7 @@ img {
 
 .filters h1 {
   margin: 0;
-  margin-bottom: 26px;
+  margin-bottom: 19px;
 
   font-weight: 700;
   font-size: 35px;
@@ -1633,7 +1635,7 @@ fieldset:nth-child(4) {
 .deals {
   display: flex;
   justify-content: center;
-  margin-bottom: 34px;
+  margin-bottom: 39px;
 }
 
 .hits-list {
@@ -1903,39 +1905,35 @@ fieldset:nth-child(4) {
 
 .topping-wrapper {
   display: flex;
-  width: 704px;
-  height: 40px;
-
-  font-weight: 500;
-  line-height: 36px;
-  font-family: inherit;
-  color: #ffffff;
-
-  background-color: #9db1a5;
-  border-radius: 20px;
+    width: 704px;
+    height: 38px;
+    align-items: center;
+    justify-content: space-evenly;
+    font-weight: 500;
+    line-height: 36px;
+    font-family: inherit;
+    color: #ffffff;
+    background-color: #9db1a5;
+    border-radius: 20px;
 }
 
 
 .topping-wrapper label {
   position: relative;
-
   display: inline-block;
-  margin-top: 7px;
-  padding: 0 10px;
-  padding-top: 0;
+  padding-left: 25px;
 }
 
 
 .toggle + .filter-lbl::before {
   content: "";
-
-  display: inline-block;
+  position: absolute;
+  display: block;
   width: 22px;
   height: 22px;
-  padding-left: 15px;
-
-  vertical-align: baseline;
-
+  top: -1px;
+    left: -11px;
+  
   background-image: url(../img/checkbox-off.svg);
   background-repeat: no-repeat;
   background-size: 22px 22px;
@@ -1955,7 +1953,7 @@ fieldset:nth-child(4) {
   position: relative;
 
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   width: 412px;
   height: 36px;
@@ -1973,9 +1971,7 @@ fieldset:nth-child(4) {
 .filter-fat {
   position: relative;
 
-  margin-top: 2px;
-  padding-top: 0;
-  padding-left: 7px;
+  padding-left: 44px;
 }
 .topping-filter {
   width: 703px;
@@ -1984,15 +1980,13 @@ fieldset:nth-child(4) {
 
 .fat-select + .filter-fat::before {
   content: "";
-  top: 4px;
-
-  display: inline-block;
+  top: 6px;
+  right: 46px;
+  left: 5px;
+  position: absolute;
+  display: block;
   width: 24px;
   height: 24px;
-  margin-right: 6px;
-
-  vertical-align: baseline;
-
   background-image: url(../img/radio-off.svg);
   background-repeat: no-repeat;
   background-size: 24px 24px;
