--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,11 @@ img {
 
 .slider {
   position: relative;
+
   padding-top: 280px;
+
   text-align: center;
-  color: #fff;
+  color: #ffffff;
 }
 
 .slider-list {
@@ -74,19 +76,19 @@ img {
 
 .slide-title {
   width: 723px;
-    margin: 0 auto;
-    margin-top: -3px;
-    margin-bottom: 26px;
-    font-weight: 700;
-    font-size: 61px;
-    line-height: 60.35px;
+  margin: 0 auto;
+  margin-top: -3px;
+  margin-bottom: 26px;
+
+  font-weight: 700;
+  font-size: 61px;
+  line-height: 60.35px;
 }
 
 
 .slider-button {
-  
-  margin-bottom: 39px;
   display: inline-block;
+  margin-bottom: 39px;
   padding: 12px 38px;
 
   font-weight: 700;
@@ -166,7 +168,6 @@ img {
   background-image: url("../img/slider-1.png");
   background-repeat: no-repeat;
   background-position: top center;
-  
 }
 
 #product-2:checked ~ .site-wrapper {
@@ -664,8 +665,9 @@ img {
 
 .deals h3 {
   margin: 0 auto;
-  margin-left: 1px;
   margin-bottom: 10px;
+  margin-left: 1px;
+
   font-weight: 700;
   font-size: 35px;
   line-height: 41px;
@@ -674,6 +676,7 @@ img {
 .deals p {
   margin-top: 4px;
   margin-bottom: 34px;
+
   font-weight: 700;
   line-height: 22px;
   text-align: left;
@@ -681,14 +684,15 @@ img {
 
 .deals-item-raspberry {
   position: relative;
-  padding: 17px;
+
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
   width: 560px;
   margin: 0;
   margin-right: 26px;
- 
+  padding: 17px;
+
   background-color: #a03472;
   background-image: url(../img/deals-1.jpg);
   background-repeat: no-repeat;
@@ -698,13 +702,14 @@ img {
 
 .deals-item-chocolate {
   position: relative;
-  padding: 17px;
+
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
   width: 560px;
   min-height: 230px;
   margin: 0;
+  padding: 17px;
 
   background-color: #553017;
   background-image: url("../img/deals-2.jpg");
@@ -724,15 +729,17 @@ img {
 .deals-button {
   display: block;
   box-sizing: border-box;
-  margin-left: auto;
   margin-top: 10px;
+  margin-left: auto;
   padding: 9px 21px 9px 21px;
+
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
   color: #ffffff;
   text-decoration: none;
   text-shadow: 2px 2px 5px rgba(160, 32, 11, 0.76);
+
   background-image: linear-gradient(#f16743, #e74b36);
   border-radius: 22px;
   box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
@@ -777,7 +784,7 @@ img {
   color: #ffffff;
 }
 .offers-cat {
-  margin-bottom: 45px;
+  margin-bottom: 76px;
 }
 .features {
   box-sizing: border-box;
@@ -786,10 +793,12 @@ img {
   margin-bottom: 40px;
   margin-left: 27px;
   padding-top: 26px;
-  padding-left: 18px;
-  padding-bottom: 23px;
   padding-right: 10px;
+  padding-bottom: 23px;
+  padding-left: 18px;
+
   color: #333333;
+
   background: url(../img/waffel.jpg) #eee0c4;
   border-radius: 14px;
 }
@@ -1222,17 +1231,18 @@ img {
   position: absolute;
   top: 20px;
   left: -20px;
+
   width: 100px;
   height: 40px;
-/* background-color: #9e4334; */
+  /* background-color: #9e4334; */
 }
 
 .basket {
-  fill: #fff;
-  }
-  .header-btn-basket:hover .basket{
-  fill: #000;
-  }
+  fill: #ffffff;
+}
+.header-btn-basket:hover .basket {
+  fill: #000000;
+}
 
 .header-btn-basket {
   display: flex;
@@ -1332,7 +1342,7 @@ img {
   display: flex;
   margin: 0;
   margin-top: -24px;
-  /* margin-bottom: 7px; */
+  margin-bottom: 7px;
   margin-left: 27px;
   padding: 0;
 
@@ -1366,7 +1376,7 @@ img {
 .pagination {
   display: flex;
   justify-content: flex-end;
-  margin-top: 30px;
+  margin: 0;
   padding: 20px;
 
   list-style: none;
@@ -1545,13 +1555,13 @@ img {
   display: block;;
 }
 .filters {
-  margin-bottom: 38px;
+  margin-bottom: 34px;
   margin-left: 27px;
 }
 
 .filters h1 {
   margin: 0;
-  margin-bottom: 19px;
+  margin-bottom: 27px;
 
   font-weight: 700;
   font-size: 35px;
@@ -1905,21 +1915,24 @@ fieldset:nth-child(4) {
 
 .topping-wrapper {
   display: flex;
-    width: 704px;
-    height: 38px;
-    align-items: center;
-    justify-content: space-evenly;
-    font-weight: 500;
-    line-height: 36px;
-    font-family: inherit;
-    color: #ffffff;
-    background-color: #9db1a5;
-    border-radius: 20px;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 704px;
+  height: 39px;
+
+  font-weight: 500;
+  line-height: 36px;
+  font-family: inherit;
+  color: #ffffff;
+
+  background-color: #9db1a5;
+  border-radius: 20px;
 }
 
 
 .topping-wrapper label {
   position: relative;
+
   display: inline-block;
   padding-left: 25px;
 }
@@ -1928,12 +1941,12 @@ fieldset:nth-child(4) {
 .toggle + .filter-lbl::before {
   content: "";
   position: absolute;
-  display: block;
+  top: 0;
+  left: 0;
+
   width: 22px;
   height: 22px;
-  top: -1px;
-    left: -11px;
-  
+
   background-image: url(../img/checkbox-off.svg);
   background-repeat: no-repeat;
   background-size: 22px 22px;
@@ -1953,14 +1966,14 @@ fieldset:nth-child(4) {
   position: relative;
 
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   width: 412px;
-  height: 36px;
+  height: 39px;
 
   font-weight: 500;
+  font-size: 16px;
   line-height: 36px;
-  font-family: inherit;
   color: #ffffff;
 
   background-color: #9db1a5;
@@ -1971,7 +1984,7 @@ fieldset:nth-child(4) {
 .filter-fat {
   position: relative;
 
-  padding-left: 44px;
+  padding-left: 37px;
 }
 .topping-filter {
   width: 703px;
@@ -1980,13 +1993,14 @@ fieldset:nth-child(4) {
 
 .fat-select + .filter-fat::before {
   content: "";
-  top: 6px;
-  right: 46px;
-  left: 5px;
   position: absolute;
-  display: block;
+  top: 4px;
+  right: 0;
+  left: 0;
+
   width: 24px;
   height: 24px;
+
   background-image: url(../img/radio-off.svg);
   background-repeat: no-repeat;
   background-size: 24px 24px;
@@ -2004,35 +2018,36 @@ fieldset:nth-child(4) {
 }
 
 .category-filters {
-
   box-sizing: border-box;
   min-width: 193px;
   min-height: 36px;
   padding: 0 16px;
 
   font-weight: 500;
+  font-weight: 700;
   font-size: 16px;
   line-height: 18px;
   color: #ffffff;
-  font-weight: 700;
+
   background-color: transparent;
   background-image: url("../img/select-arrow.svg");
-   background-size: 11px 11px;
+  background-repeat: no-repeat;
   background-position: 161px center;
-   background-repeat: no-repeat; 
-   appearance: none;
+  background-size: 11px 11px;
   border: none;
-  -webkit-appearance: none;
   border-radius: 20px;
   outline: none;
-  cursor: pointer; 
+  cursor: pointer;
+
+  -webkit-appearance: none;
+          appearance: none;
 }
 
 .category-filters:hover {
   color: #000000;
+
   background-color: #ffffff;
   background-image: url("../img/icon-down-dir.svg");
- 
 }
 
 
